Updated login component and fixed an issue where clicking to see the password visibly was submitting the form.

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -28,3 +28,17 @@
     width: 100%;
   }
 
+  mat-card-title {
+    background-color: #3f51b5;
+    color: white;
+    padding: 5%;
+    margin-bottom: 4%;
+    font-size: 24px;
+    text-align: center;
+
+  }
+
+  mat-divider {
+    margin-bottom: 3%;
+  }
+
